fix: create fluid font size variables and fix layout issues

--- a/src/styles/scss/layouts/welcome.module.scss
+++ b/src/styles/scss/layouts/welcome.module.scss
@@ -8,8 +8,9 @@ body {
 }
 
 .container {
-    font-family: Inter, Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif;
+    font-family: Inter, Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, system-ui, sans-serif;
     height: 100%;
+    padding-inline: 1rem;
 }
 
 .background {
@@ -30,10 +31,10 @@ main {
 
 .hero {
     display: flex;
-    align-items: start;
+    gap: 1rem;
     flex-direction: column;
     justify-content: center;
-    padding: 16px;
+    align-items: center;
 }
 
 h1 {
@@ -43,7 +44,7 @@ h1 {
 
 pre {
     font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas,
-    'DejaVu Sans Mono', monospace;
+        'DejaVu Sans Mono', monospace;
     font-weight: normal;
     background: linear-gradient(14deg, #d83333 0%, #f041ff 100%);
     -webkit-background-clip: text;
@@ -53,15 +54,18 @@ pre {
 }
 
 h2 {
-    margin: 0 0 1em;
+    margin: 0 auto;
     font-weight: normal;
     color: #111827;
-    font-size: 20px;
+    font-size: $lgFontSizeFluid;
+    text-align: center;
 }
 
 p {
+    margin: 0 auto;
     color: #4b5563;
-    font-size: 16px;
+    font-size: $mdFontSizeFluid;
+    text-align: center;
     line-height: 24px;
     letter-spacing: -0.006em;
     margin: 0;
@@ -70,8 +74,8 @@ p {
 code {
     display: inline-block;
     background:
-            linear-gradient(66.77deg, #f3cddd 0%, #f5cee7 100%) padding-box,
-            linear-gradient(155deg, #d83333 0%, #f041ff 18%, #f5cee7 45%) border-box;
+        linear-gradient(66.77deg, #f3cddd 0%, #f5cee7 100%) padding-box,
+        linear-gradient(155deg, #d83333 0%, #f041ff 18%, #f5cee7 45%) border-box;
     border-radius: 8px;
     border: 1px solid transparent;
     padding: 6px 8px;
@@ -93,30 +97,33 @@ code {
     margin-top: 10px;
 
     a {
-        @extend .link
+        @extend .link;
+        padding: .5rem;
     }
 }
 
 .title {
-    font-size: 4rem;
-    margin-bottom: 0.5em;
+    font-size: $xlFontSizeFluid;
+    padding-bottom: .5em;
 }
 
 // @todo create link component and clean this up
-.link{
+.link {
     display: flex;
     align-items: center;
 
     // snake-case conversion doesn't appear to be working, using camelCase
     .discordIcon {
         @extend .linkIcon;
-        path{
+
+        path {
             transition: $fastTransition
         }
     }
 
-    &:focus, &:hover {
-        .discordIcon path{
+    &:focus,
+    &:hover {
+        .discordIcon path {
             color: $discordBlue;
         }
     }
